--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".activity.SplashActivity">
     <ImageView
+        android:id="@+id/splashImageView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,7 +27,19 @@
         android:background="#00000000"
         android:onClick="skip"
         android:text="跳过"
+        android:textColor="@android:color/holo_orange_dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/splashImageView"
+        app:srcCompat="@drawable/icon"
+        android:visibility="invisible"/>
 
 </android.support.constraint.ConstraintLayout>
