--- a/app/src/main/res/layout/item_news1.xml
+++ b/app/src/main/res/layout/item_news1.xml
@@ -31,13 +31,14 @@
         android:layout_marginRight="8dp"
         android:maxLines="2"
         android:text="新闻标题"
-        android:textSize="17sp"
+        android:textSize="18sp"
         app:layout_constrainedWidth="true"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/newsImg1"
-        app:layout_constraintTop_toTopOf="@+id/newsImg1" />
+        app:layout_constraintTop_toTopOf="@+id/newsImg1"
+        android:textColor="#000"/>
 
     <TextView
         android:id="@+id/newsType1"
