--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.GuideActivity">
+    tools:context=".activity.GuideActivity"
+    android:paddingTop="20dp">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/guideViewPager"
