--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="48dp"
-    android:background="#F55137"
+    android:background="#fff"
     android:minHeight="?attr/actionBarSize"
     android:theme="?attr/actionBarTheme">
     <TextView
@@ -13,6 +13,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textSize="19sp"
-        android:textColor="#fff"
+        android:textColor="#000"
         android:text="标题"/>
 </android.support.v7.widget.Toolbar>
