--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,16 +6,18 @@
     android:id="@+id/LinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingTop="20dp">
+    android:orientation="vertical">
+
     <include
         android:id="@+id/include"
         layout="@layout/toolbar" />
+
 <android.support.constraint.ConstraintLayout
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
+
     <android.support.v4.view.ViewPager
         android:id="@+id/AppViewPager"
         android:layout_width="0dp"
@@ -39,4 +41,5 @@
         app:labelVisibilityMode="labeled"/>
 
 </android.support.constraint.ConstraintLayout>
+
 </LinearLayout>
