--- a/app/src/main/res/layout/item_news1.xml
+++ b/app/src/main/res/layout/item_news1.xml
@@ -2,10 +2,11 @@
 
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp">
+    android:layout_margin="4dp"
+    app:cardElevation="4dp"
+    app:cardCornerRadius="6dp">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -61,4 +62,5 @@
             app:layout_constraintStart_toEndOf="@+id/newsImg1" />
 
     </android.support.constraint.ConstraintLayout>
+
 </android.support.v7.widget.CardView>
