--- a/app/src/main/res/layout/item_news2.xml
+++ b/app/src/main/res/layout/item_news2.xml
@@ -4,12 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp">
+    android:layout_margin="4dp"
+    app:cardElevation="4dp"
+    app:cardCornerRadius="6dp">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
 
         <TextView
             android:id="@+id/newsTitle2"
@@ -81,4 +82,5 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/news2img3" />
     </android.support.constraint.ConstraintLayout>
+
 </android.support.v7.widget.CardView>
