--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.Toolbar
-    android:id="@+id/toolbar"
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/LinearLayout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+<android.support.v7.widget.Toolbar
+    android:id="@+id/appToolbar"
     android:layout_width="match_parent"
     android:layout_height="70dp"
     android:background="#fff"
@@ -16,4 +21,11 @@
         android:textSize="19sp"
         android:textColor="#000"
         android:text="标题"/>
+    <Button
+        android:id="@+id/test"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_gravity="right"
+        android:background="@drawable/ic_palette_white_24dp"/>
 </android.support.v7.widget.Toolbar>
+</LinearLayout>
