--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,8 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.SplashActivity"
-    android:paddingTop="20dp">
+    tools:context=".activity.SplashActivity">
     <ImageView
         android:id="@+id/splashImageView"
         android:layout_width="0dp"
@@ -22,7 +21,7 @@
         android:id="@+id/skipButton"
         android:layout_width="30dp"
         android:layout_height="25dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:background="@drawable/skip_shape"
