--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -12,7 +12,7 @@
     android:background="#fff"
     android:minHeight="?attr/actionBarSize"
     android:theme="?attr/actionBarTheme"
-    android:paddingTop="25dp">
+    android:paddingTop="27dp">
     <TextView
         android:id="@+id/toolbarTitle"
         android:layout_width="wrap_content"
@@ -22,10 +22,12 @@
         android:textColor="#000"
         android:text="标题"/>
     <Button
-        android:id="@+id/test"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:id="@+id/style"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
         android:layout_gravity="right"
+        android:layout_marginRight="20dp"
+        android:visibility="invisible"
         android:background="@drawable/ic_palette_white_24dp"/>
 </android.support.v7.widget.Toolbar>
 </LinearLayout>
