--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -12,23 +12,66 @@
     android:background="#fff"
     android:minHeight="?attr/actionBarSize"
     android:theme="?attr/actionBarTheme"
-    android:paddingTop="27dp">
+    android:paddingTop="29dp">
+
+    <Button
+        android:id="@+id/backButton"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
+        android:background="@drawable/ic_arrow_back_black_24dp"
+        android:visibility="invisible"
+        android:onClick="back"
+        />
+    <Button
+        android:id="@+id/closeButton"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
+        android:layout_marginLeft="30dp"
+        android:background="@drawable/ic_close_black_24dp"
+        android:visibility="invisible"
+        android:onClick="closePage"
+        android:layout_marginStart="15dp" />
+
     <TextView
         android:id="@+id/toolbarTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textSize="19sp"
+        android:maxWidth="230dp"
         android:textColor="#000"
         android:maxLines="1"
         android:text="标题"/>
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_marginRight="20dp"
+        android:layout_marginEnd="20dp">
     <Button
         android:id="@+id/style"
         android:layout_width="26dp"
         android:layout_height="26dp"
         android:layout_gravity="right"
-        android:layout_marginRight="20dp"
         android:visibility="invisible"
         android:background="@drawable/ic_palette_white_24dp"/>
+    <Button
+        android:id="@+id/textSize"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
+        android:layout_gravity="right"
+        android:visibility="invisible"
+        android:background="@drawable/ic_text_fields_black_24dp"/>
+    </FrameLayout>
+    <Button
+        android:id="@+id/browserButton"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
+        android:background="@drawable/ic_share_black_24dp"
+        android:layout_gravity="right"
+        android:visibility="invisible"
+        android:onClick="openBrowser"
+        android:layout_marginRight="5dp"
+        android:layout_marginEnd="5dp" />
 </android.support.v7.widget.Toolbar>
 </LinearLayout>
